now with emojies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "drikkelek",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://evensandvik.github.io/Fyllapp",
+  "homepage": "https://evensandvik.github.io/Fyllapp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
